# strepsuis_phylotrait

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  ALGORITHMS.md  BENCHMARKS.md  CASE_STUDIES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Phylogenetic_clustering_2025_03_21.py  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TESTING.md  TUTORIAL.md  USER_GUIDE.md  VALIDATION.md  deployment_verification.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  strepsuis_phylotrait.py
.github/: copilot-instructions.md
analysis_results/: README.md
assets/: README.md
data/: README.md
examples/: README.md  Serotype.csv  Snp_tree.newick
notebooks/: PhyloTrait_Analysis.ipynb  strepsuis-phylotrait_colab_demo.ipynb
strepsuis_phylotrait/: __init__.py  advanced_phylo_analysis.py  analyzer.py  cli.py  config.py  data_backend.py  excel_report_utils.py  generate_synthetic_data.py  large_data_integration.py  mdr_analysis_core.py  optimizations.py  output_handler.py  parallel_phylo.py  phylo_analysis_core.py  uncertainty.py
synthetic_data/: GENERATION_METHODOLOGY.md  README.md  generate_synthetic_data.py  metadata.json  synthetic_metadata.json
test_reports/: README.md
tests/: conftest.py  test_analysis_pipeline.py  test_analyzer.py  test_analyzer_coverage.py  test_analyzer_full.py  test_analyzer_methods.py  test_analyzer_phylo.py  test_basic.py  test_basic_functions.py  test_cli.py  test_cli_coverage.py  test_cli_full.py  test_cli_methods.py  test_cli_phylo.py  test_clustering_coverage.py  test_clustering_methods.py  test_clustering_module_real.py  test_comprehensive_real_data.py  test_config.py  test_config_extended.py  test_config_full.py  test_core_classes.py  test_coverage_boost_phylo_core.py  test_data_backend.py  test_data_loader_extended.py  test_data_operations.py  test_data_validation.py  test_end_to_end.py  test_evolutionary_analysis.py  test_evolutionary_analysis_full.py  test_evolutionary_metrics.py  test_evolutionary_phylogenetic_signal.py  test_evolutionary_real.py  test_excel_complete.py  test_excel_final.py  test_excel_report_coverage.py  test_excel_report_full.py  test_excel_report_methods.py  test_excel_report_phylo.py  test_excel_utils_full.py  (+68 more)
validation/: MATHEMATICAL_VALIDATION_REPORT.md  PERFORMANCE_BENCHMARKS_REPORT.md  PERFORMANCE_VALIDATION_REPORT.md  (+7 more)
(+12 files in other folders)
